--- a/SimpleBackup/appsettings.json
+++ b/SimpleBackup/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "ftp": {
-    "host": "10.0.0.21",
-    "user": "servertransfer",
-    "password": "",
-    "baseDir": "output"
+    "host": "myftp.example.com",
+    "user": "ftpuser",
+    "password": "ftppassword",
+    "baseDir": "logs"
   },
   "backup": {
-    "dir": "C:\\Work\\Test",
-    "name": "mails.{0:yyyy-MM-dd}.zip"
+    "dir": "/var/logs/mylogs",
+    "name": "logs.{0:yyyy-MM-dd}.zip"
   }
 }
